--- a/stream-processor.yaml
+++ b/stream-processor.yaml
@@ -1,3 +1,5 @@
+schemaversion: 1
+
 source:
   kafka:
     url: ip-kafka:9208
@@ -11,8 +13,9 @@ destination:
   initiate:
       table_name: 'tabel_mantap'
       ddl: "{{SHOW CREATE TABLE mantap}}"
+      if_schema_exists: "ignore" | "drop"
       dml: 'SELECT count(1) as mantap from trans'
-      if_exists: "truncate" | "replace" | "fail" | "ignore"
+      if_data_exists: "drop"
 
 from_event:
     topic: 'trans'
